# XDouble

./: CMakeLists.txt  LICENSE  README.md  double-double.cpp  double-double.h  example1.cpp  example2.cpp  xdouble.h
.github/workflows/: cmake-multi-platform.yml
double-double/: main.cpp
double-double.xcodeproj/: project.pbxproj
double-double.xcodeproj/xcuserdata/hoff.xcuserdatad/xcschemes/: xcschememanagement.plist
unittests/: CMakeLists.txt  arithmetic.cpp  arithmetic_tests.cpp  classification_tests.cpp  comparison.cpp  comparison_tests.cpp  constant_tests.cpp  conversion.cpp  error_tests.cpp  explog_tests.cpp  main.cpp  main.h  manipulation_tests.cpp  minmax_tests.cpp  moretests.cpp  other_tests.cpp  parsing.cpp  power_tests.cpp  quaddouble_tests.cpp  rounding_tests.cpp  smoke_tests.cpp  tests.cpp  trigonometric.cpp
xdouble.xcodeproj/: project.pbxproj
xdouble.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xdouble.xcodeproj/xcuserdata/hoff.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xdouble.xcodeproj/xcuserdata/hoff.xcuserdatad/xcschemes/: xcschememanagement.plist
